changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Make skill tools be picked up by the 'magical device' category.
This implements part of feature request #3094026: auto-pickup option for
lockpick/flint&steel/torch archetypes
Nicolas Weeger 2010-11-14

Adjust alchemy success chance to not depend on the ingredients,
but only the recipe difficulty as defined in lib/formulae and the skill.
Nicolas Weeger 2010-11-07

Adjust alchemy danger computation: remove name length, but take into
account weight and cursed or damned item status.
Nicolas Weeger 2010-11-07

Have singing honor the 'no_mood_change' flag.
Nicolas Weeger 2010-11-06

Partial fix for #3093752: Too hard to get experience in oratory (part 3).
Allow orating to monsters with a message (why not?). This also
enables to orate to monsters on signs.
While we're at it, honor the 'no_mood_change' flag for oratory.
Nicolas Weeger 2010-11-06

Partial fix for #3093752: Too hard to get experience in oratory (part 2).
Set monster's skill to oratory (in this case) so experience for killing
something goes there.
Nicolas Weeger 2010-11-06

Partial fix for #3093752: Too hard to get experience in oratory (part 1).
Compute skill exp before setting monster's exp to 0.
Nicolas Weeger 2010-11-06

Fix broken magic map spell for "small" maps.
Nicolas Weeger 2010-11-06

Integrate some lore from the wiki to the messages file.
Nicolas Weeger 2010-11-06

Fix possibility of arithmetic overflow in the function buf_overflow().
Arvid Norlander 2010-10-25

Enable Python 2.7 to be used. Prefer 3.1 over 3.0.
Arvid Norlander 2010-10-24

Remove 'Fontindex' type and use 'uint16', for coherence.